syntax = "proto3";

package searchdpb;

import "xsearch/pb/xsearch.proto";

service Admin {
    rpc Info (InfoReq) returns (InfoRsp) {}
}

service Searchd {
    rpc Search (SearchReq) returns (SearchRsp) {}
}

message InfoReq {
}

message InfoRsp {
    repeated string shards = 1;
}

message SearchReq {
    string shardID = 1;
    xsearchpb.Query query = 2;
    uint64 start = 3;
    uint32 count = 4;
}

message SearchRsp {
    repeated xsearchpb.Document docs = 1;
}
