syntax = "proto3";

package searchdpb;

option go_package = "searchdpb";

import "xsearch/xsearchpb/xsearch.proto";

service Searchd {
    rpc AddDoc (AddDocRequest) returns (AddDocReply) {}
    rpc RemoveDoc (RemoveDocRequest) returns (RemoveDocReply) {}
    rpc Search (SearchRequest) returns (SearchReply) {}
}

message AddDocRequest {
    xsearchpb.Document doc = 1;
}

message AddDocReply {
}

message RemoveDocRequest {
    xsearchpb.Document doc = 1;
}

message RemoveDocReply {
}

message SearchRequest {
    xsearchpb.Query query = 1;
    uint64 start = 2;
    int32 count = 3;
}

message SearchReply {
    repeated xsearchpb.Document docs = 1;
}
